# RiseIn-ICP-Workshop

src/events_backend/: Cargo.toml
src/events_backend/src/: lib.rs
