[package]
name = "events_backend"
description = "setting event on IC"
authors = ["..."]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
ic-stable-structures="0.6.2"
serde="1.0.132"
ic-cdk-macros = "0.8.1"
serde_json = "1.0.93"
